--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 *.WAV
 *.wav
 *.txt
-/librispeech/.ipynb_checkpoints
-/librispeech/librispeech_data/
+/librispeech/tasks/preprocessing/.ipynb_checkpoints
+/librispeech/tasks/preprocessing/librispeech_data/
