update requirements for docker

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 *.WAV
 *.wav
 *.txt
+!requirements.txt
 /librispeech/tasks/preprocessing/.ipynb_checkpoints
 /librispeech/tasks/preprocessing/librispeech_data/
