refactor the code

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 !requirements.txt
 /librispeech/tasks/preprocessing/.ipynb_checkpoints
 /librispeech/tasks/preprocessing/librispeech_data/
+clearml.conf
