--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /librispeech/tasks/preprocessing/.ipynb_checkpoints
 /librispeech/tasks/preprocessing/librispeech_data/
 clearml.conf
+.ipynb_checkpoints/*
