--- a/librispeech/tasks/config/config_task_librispeech.yaml
+++ b/librispeech/tasks/config/config_task_librispeech.yaml
@@ -4,7 +4,7 @@
 project_name: 'audio_preproc_test'
 task_name: 'librispeech_manifest_generation'
 dataset_name: 'librispeech'
-output_url: 's3://experiment-logging/' #storage'
+output_url: 's3://experiment-logging' #/storage'
 dataset_project: 'datasets/librispeech'
 
 # arguments corresponding to the generate_manifest.py
