--- a/librispeech/tasks/config/config_task_jtubespeech_small.yaml
+++ b/librispeech/tasks/config/config_task_jtubespeech_small.yaml
@@ -4,7 +4,7 @@
 project_name: 'audio_preproc_test'
 task_name: 'jtubespeech_small_manifest_generation'
 dataset_name: 'jtubespeech_small'
-output_url: 's3://experiment-logging' #/storage'
+output_url: 's3://experiment-logging'
 dataset_project: 'datasets/jtubespeech'
 
 # arguments corresponding to the generate_manifest.py
