--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 !requirements.txt
 /librispeech/tasks/preprocessing/.ipynb_checkpoints
 /librispeech/tasks/preprocessing/librispeech_data/
+/librispeech/tasks/preprocessing/librispeech_v2/
 clearml.conf
 .ipynb_checkpoints/*
