--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@
 *.wav
 *.txt
 !requirements.txt
-/librispeech/tasks/preprocessing/.ipynb_checkpoints
-/librispeech/tasks/preprocessing/librispeech_data/
-/librispeech/tasks/preprocessing/librispeech/
+tasks/preprocessing/librispeech_data/*
+tasks/preprocessing/librispeech/*
+tasks/preprocessing/librispeech_copy/*
+tasks/preprocessing/jtubespeech_small_data/*
+tasks/datasets/*
 clearml.conf
 .ipynb_checkpoints/*
