--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
   local: 
     build: ./ #Uncomment this to rebuild
     #image:  pythonfiles_model
-    image: manifest_preprocessing:v0.1.0
+    image: manifest_preprocessing:latest
     ports:
       - 8888:8888
     #Let code run
