--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,7 +13,9 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ./:/manifest_preprocessing
+      - ../:/manifest_preprocessing
+      #- /mnt/d/datasets/librispeech_copy/:/manifest_preprocessing/datasets/librispeech
+      - /mnt/d/datasets/mms/mms_batch_1/:/manifest_preprocessing/datasets/mms/mms_batch_1
     ulimits:
       memlock: -1 # set upper limit for how much memory is locked for the container (-1 means lock as much as the container uses)
     shm_size: 32gb # set upper limit for how much shared memory container can use
